# LEGO_Bricks_ML_Vision

./: .gitignore  FolderStructure.txt  GenerateStructure.ps1  GenerateStructure.py  LICENSE  PyPl_publish.py  README.md  ReorganizeProject.ps1  apply_new_folder_tree.ps1  cli.py  estructura.txt  gitkeep_creator.ps1  kaggle.json  lego_cli.py  pyproject.toml  requirements.txt  setup.py  test_export_logs.py  train.py
docker/Train_Github_version/: CHANGELOG.md  Dockerfile  Dockerfile.txt  Train_cli.py  Train_models_docker.py  requirements.txt
docker/train/: Dockerfile  pipeline_train_docker.py  requeriments-train.txt  requirements-train.txt
docker/train_LEGO_ml_vision/: Dockerfile  train_cli.py
docker/utils/: Dockerfile,txt  pipeline-utils_docker.py  requirements-utils.txt  utils_cli.py
docker/utils_LEGO_ml_vision/: Dockerfile  pipeline-utils_docker.py  (+2 more)
docs/: App_Initial_prompt.md  LEGO_Bricks_Project_Miguel_Di_Lalla.md  train_py_refactoring.md
notebooks/: LEGO_Bricks_Identification_Project_Overview.ipynb  LEGO_Bricks_Identification_Project_Technical_Report.ipynb  LEGO_MachineVision_refactorTest.ipynb  Refurbishing_Project_doc.ipynb  Refurbishing_Project_doc_withCODE.ipynb  Technical_Report.ipynb  Technical_Report.md  TrainTest.ipynb  Utilities_dev.ipynb  estructura.txt  notebook_test_foldersTree.txt  tree_structure.txt
scripts/: __init__.py  pipeline.py  pipeline_inference_part1.py  pipeline_report_viz.py  pipeline_setup.py  pipeline_train.py  pipeline_utils.py  visualize_presentation.py
tests/: test_model_utils.py
utils/: data_utils.py  model_utils.py
(+52 files in other folders)
