[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lego-vision-cli"
version = "1.0.0"
description = "CLI for managing LEGO Bricks ML pipeline"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "torch",
    "ultralytics==8.2.99",
    "opencv-python==4.9.0.80",
    "pillow==11.1.0",
    "matplotlib==3.8.4",
    "albumentations==1.3.1",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "pyyaml==6.0.1",
    "json5==0.9.14",
    "glob2==0.7",
    "optuna==3.5.0",
    "scikit-learn==1.4.1",
    "argparse==1.4.0",
    "logging==0.4.9.6",
    "tqdm==4.66.2",
    "shutil",
    "pathlib",
    "platform",
    "datetime",
    "kaggle==1.6.17"
]

[project.urls]
Homepage = "https://github.com/MiguelDiLalla"
Documentation = "https://github.com/MiguelDiLalla/LEGO_Bricks_ML_Vision/blob/main/README.md"
Repository = "https://github.com/MiguelDiLalla/LEGO_Bricks_ML_Vision"

[project.scripts]
lego-setup = "scripts.pipeline_setup:main"
lego-train = "scripts.pipeline_train:main"
lego-utils = "scripts.pipeline_utils:main"
lego-export-results = "scripts.cli:run_export_results"
